tests/toy/neg/001419_mutation.toylang
program a = { var a : else; } .
